--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 server:
   port: 8080
   servlet:
-    context-path: /crm
+    context-path: /mybook
 
 ## 数据源配置
 spring:
@@ -41,6 +41,5 @@ pagehelper:
 logging:
   level:
     com:
-      yjx:
-        crm:
-          dao: debug
+      mybook:
+        dao: debug
