--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 ## 端口号  上下文路径
 server:
-  port: 8080
+  port: 8989
   servlet:
     context-path: /mybook
 
@@ -8,10 +8,10 @@ server:
 spring:
   datasource:
     type: com.mchange.v2.c3p0.ComboPooledDataSource
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/lm?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
-    username: root
-    password: root
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://192.168.20.49:3306/lm?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+    username: sunyang
+    password: 123456
 
   ## freemarker
   freemarker:
